JSW Devsb/src/objects/State_Head__c.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <summarizedField>Zonal_Head__c.Actual__c</summarizedField>
        <summaryForeignKey>Zonal_Head__c.State_Head__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>State_Head</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <summarizedField>Zonal_Head__c.Target__c</summarizedField>
        <summaryForeignKey>Zonal_Head__c.State_Head__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Zonal Head</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZH-{00000}</displayFormat>
        <label>Zonal Head Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zonal Head</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>